client/src/components/CSS/App.css
.mapLayer {
  width: calc(var(--vw, 1vw) * 100);
  height: calc(var(--vh, 1vh) * 100);
  overflow: hidden;
}

.cityDetailView {
  position: absolute;
  width: calc(var(--vw, 1vw) * 100);
  height: calc(var(--vh, 1vh) * 90);
  bottom: 0;
  right: 0;
  overflow: scroll;
  background-color: var(--base-white-1);
  color: var(--base-black-1);
  display: grid;
  grid-template-rows: 7rem 1fr;
  grid-template-columns: 1fr minmax(0, 33rem) 1fr;
  z-index: 10;
}

.cityDetailView_Header {
  display: flex;
  align-items: center;
  width: inherit;
  justify-content: space-between;
  padding: 1.3rem;
  grid-column: span 3;
  border-bottom: 1px solid var(--base-black-1);
  font-family: var(--body-font), sans-serif;
  font-weight: 900;
}

.cityDetailView_videoList {
  padding: 0 1.3rem 10rem 1.3rem;
  grid-column: 2;
  max-width: 100%; 
  display: inline-block;
}

@media(min-width: 1024px) {
  .cityDetailView {
    top: 0;
    right: 0;
    height: calc(var(--vh, 1vh) * 100);
    grid-template-columns: calc(var(--vw, 1vw) * 100);
  }
  .cityDetailView_Header {
    width: inherit;
    grid-column: 1;
  }
  .cityDetailView_videoList {
    width: inherit;
    grid-column: 1;
    justify-self: start;
  }
}

.marker_btn, .close_btn {
  background: none;
  border: none;
  cursor: pointer;
}

.marker_btn {
  display: grid;
  justify-items: center;
}

.marker_txt {
  background-color: var(--accent-color-1);
  opacity: 0.80;
  /* width: 3rem;
  height: 3rem; 
  line-height: 3rem; */
  color: var(--base-white-1);
  font-weight: bold;
  font-size: '1.2em';
  margin-bottom: 0rem;
  border-radius: 3rem;
  display: flex;
  align-items: center;
}

.marker_txt p{
  flex-grow: 1;
}

.close_btn {
  width: 3rem;
  height: 3rem;
  position: relative;
}

.close_btn img {
  display: block;
  width: 1.5rem;
  height: 1.5rem;
  margin: 0 auto;
}

.linkCard {
  margin-bottom: 2.5rem;
  padding-bottom: 1.5rem;
  border-bottom: 1px solid var(--base-black-1);
  font-family: var(--body-font), sans-serif;
  font-weight: 400;
}

.linkCard h2{
  font-family: var(--body-font), sans-serif;
  font-weight: 900;
  font-size: 1.2rem;
}

.rawLink {
  display: "block";
  margin-bottom: 0.5rem; 
  color: var(--accent-color-1);
}


.submitFormContainer {
  position: absolute;
  right: 0px;
  width: 100%;
  background-color: var(--base-black-1);
  color: var(--base-white-1);
  border-radius: 8px 8px 0 0;
  -moz-box-shadow: 
    -2.8px -2.8px 2.2px rgba(0, 0, 0, 0.034),
    -6.7px -6.7px 5.3px rgba(0, 0, 0, 0.048),
    -12.5px -12.5px 10px rgba(0, 0, 0, 0.06),
    -22.3px -22.3px 17.9px rgba(0, 0, 0, 0.072),
    -41.8px -41.8px 33.4px rgba(0, 0, 0, 0.086),
    -100px -100px 80px rgba(0, 0, 0, 0.12);
  -webkit-box-shadow: 
    -2.8px -2.8px 2.2px rgba(0, 0, 0, 0.034),
    -6.7px -6.7px 5.3px rgba(0, 0, 0, 0.048),
    -12.5px -12.5px 10px rgba(0, 0, 0, 0.06),
    -22.3px -22.3px 17.9px rgba(0, 0, 0, 0.072),
    -41.8px -41.8px 33.4px rgba(0, 0, 0, 0.086),
    -100px -100px 80px rgba(0, 0, 0, 0.12);
  box-shadow:
    -2.8px -2.8px 2.2px rgba(0, 0, 0, 0.034),
    -6.7px -6.7px 5.3px rgba(0, 0, 0, 0.048),
    -12.5px -12.5px 10px rgba(0, 0, 0, 0.06),
    -22.3px -22.3px 17.9px rgba(0, 0, 0, 0.072),
    -41.8px -41.8px 33.4px rgba(0, 0, 0, 0.086),
    -100px -100px 80px rgba(0, 0, 0, 0.12);
  z-index: 20;
  overflow: hidden;
}

@media(min-width: 1024px) {
  .submitFormContainer {
    width: 380px;
  }
}

.submitFormBody{
  padding: 0 1.3rem 3rem 1.3rem;
}

.submitFormContainer form {
  display: grid;
  grid-template-columns: 2.5rem 1fr;
  grid-gap: 1rem;
  margin: 2rem 0 2rem 0;
}

.field {
  grid-column: span 2;
  display: grid;
  grid-gap: inherit;
  grid-template-columns: 2.5em 1fr;
  grid-template-columns: subgrid;
  align-items: center;
}

.field input {
  border-radius: 0.5em;
  border: none;
  padding: 1em;
  opacity: 0.9;
  max-width: 50rem;
  font-size: 1rem;
}

.primary_btn {
  cursor: pointer;
  background-color: var(--accent-color-1);
  color: var(--base-white-1);
  border: none;
  font-weight: bold;
  border-radius: 1rem;
  font-size: 0.9rem;
}

.submitFormContainer .submitButton {
  grid-column: 2;
  height: 3.5em;
  max-width: 16em;
}

.sendVideoMessage {
  font-size: 0.9rem;
}

.toggleCloseButton {
  display: flex;
  width: 100%;
  height: 50px;
  border: none;
  border-radius: 8px 8px 0 0 ;
  color: var(--base-white-1);
  cursor: pointer;
  padding: 5px 20px;
  align-items: center;
}

.toggleCloseButton img{
  margin-right: 0.5rem;
}

.toggleCloseButton p {
  font-weight: bold;
  font-size: 0.9rem;
}

@media(max-width: 720px) {
  .toggleCloseButton:focus {
    outline: none;
  }
}

.thankYouBody {
  padding: 1.3rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center  ;
}

.thankYouBody h1 {
  margin-bottom: 0.1rem;
}

.thankYouBody img {
  order: -1;
  height: 12rem;
}

.doneButton  {
  width: 10rem;
  height: 3rem;
  margin-top: 1rem;
}

.introScreenContainer {
  width: calc(var(--vw, 1vw) * 100);
  height: calc(var(--vh, 1vh) * 100);
  position: absolute;
  padding: 0 2rem 0 2rem;
  background-color: rgb(255, 88, 83, 0.90);
  color: var(--base-white-1);
  top: 0;
  left: 0;
  z-index: 30;
  text-align: center;
  display: grid;
  grid-template-columns: 1fr minmax(320px, 500px) 1fr;
  align-items: center;
  overflow: hidden;
  font-family: var(--display-font), var(--body-font), sans-serif;
}

.introScreenContent {
  grid-column: 2;
  opacity: 1.0;
  font-size: 1rem;
}

.introScreenContent p {
  font-family: var(--body-font), sans-serif;
  font-size: 1.2rem;
}

.introScreenContent button {
  width: 12em;
  height: 3em;
  margin-top: 1em;
  background-color: var(--base-white-1);
  color: var(--accent-color-1);
  font-size: 1.1rem;
}

.secNavContainer {
  display: flex;
  list-style: none;
  position: absolute;
  top: 1.3rem;
  right: 1.3rem;
  z-index: 25;
  padding-left: 0;
}

.secNavContainer li {
  margin-right: 1em;
}

.secNavContainer li:last-of-type {
  margin-right: 0;
}

.secNavContainer a {
  opacity: 50%;
  color: var(--base-white-1);
  text-decoration: none;
  background-repeat: no-repeat;
  padding: 1.2rem;
  background-position: center right;
}

.secNavContainer a:active {
  opacity: 100%;
}

@media(min-width: 1024px) {
  .secNavContainer a {
    background-position: center left;
    padding-left: 2rem;
  }
  .secNavContainer a::after {
    content: attr(datacontent);
  }
  .secNavContainer a:hover {
    opacity: 100%;
  }
}

@media(max-width: 720px) {
  #twitterNav {
    display: none;
  }
  .secNavContainer li {
    margin-right: 0;
  }
}

